--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,32 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
+
     tools:context=".Screens.DashboardActivity">
 
-    <ImageView
-        android:id="@+id/logout"
-        android:layout_width="30dp"
-        android:layout_gravity="top|end"
-        android:layout_margin="20dp"
-        android:src="@drawable/power"
-        android:layout_height="30dp"
-        app:tint="@color/myTheme" />
-
-
-
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         android:text="Dashboard"
-        android:textAlignment="center"
-        android:layout_gravity="center"
-        android:textSize="30sp"/>
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/logo"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ecomm"
+            android:fontFamily="@font/poppins_bold"
+            android:textSize="35sp"
+            android:textColor="@color/textcolor"
+            android:layout_weight="1"
+            android:translationX="-5dp"/>
+
+        <ImageView
+            android:id="@+id/logout"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/power"
+            android:layout_marginRight="10dp"
+            app:tint="@color/myTheme" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/logo"
+        app:civ_border_color="@color/myTheme"
+        app:civ_border_width="2dp"
+        android:layout_marginRight="10dp"
+        />
 
 
-</FrameLayout>
+
+
+</LinearLayout>
+
+
+   <FrameLayout
+       android:id="@+id/frame"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_weight="1"/>
+
+
+
+
+
+
+
+
+</LinearLayout>
