--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -37,6 +37,34 @@
             android:src="@drawable/power"
             android:layout_marginRight="10dp"
             app:tint="@color/myTheme" />
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:gravity="end"
+              android:layout_marginRight="10dp"
+              android:orientation="vertical">
+              <TextView
+                  android:id="@+id/roleTextview"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="Role"
+                  android:textColor="#757575"
+                  android:fontFamily="@font/righteous_regular"
+                  android:textSize="12sp"/>
+
+              <TextView
+                  android:id="@+id/nameTextview"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="Jhon"
+                 android:textColor="@color/textcolor"
+                 android:fontFamily="@font/poppins_bold"
+                  android:layout_marginTop="-5dp"
+                  android:textSize="15sp"/>
+
+
+    </LinearLayout>
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile"
