--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -88,11 +88,12 @@
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
 
-
-
-
-
-
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/white"
+        app:menu="@menu/bottom_menu" />
 
 
 </LinearLayout>
