--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Screens.Fragments.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="30dp"
-        android:text="Home Fragment" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:padding="20dp"
+       android:orientation="vertical">
 
-</FrameLayout>
+<!--       Search Box-->
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:paddingHorizontal="20dp"
+           android:paddingVertical="10dp"
+           android:gravity="center"
+           android:background="@drawable/search_bg">
+
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:drawableStart="@drawable/search"
+               android:text="Search"
+               android:gravity="center_vertical"
+               android:fontFamily="@font/poppins_bold"
+               android:textSize="16sp"
+               android:layout_weight="1"
+               android:textColor="#A39595"
+               android:paddingTop="5dp"
+               android:drawablePadding="10dp"
+               android:drawableTint="@color/textcolor"
+               />
+           <ImageView
+               android:layout_width="24dp"
+               android:layout_height="24dp"
+               android:src="@drawable/filter"
+               app:tint="@color/myTheme" />
+
+
+       </LinearLayout>
+
+
+
+
+
+
+       </LinearLayout>
+
+
+
+
+
+
+</ScrollView>
