--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/home"
-        android:title="Home"
+        android:title="home"
         android:icon="@drawable/home"
         />
 
@@ -15,7 +15,7 @@
         android:icon="@drawable/favorite"
         />
     <item android:id="@+id/account"
-        android:title="Account"
+        android:title="account"
         android:icon="@drawable/user"
         />
 </menu>
