--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -1,41 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Screens.Fragments.CardFragment">
+    tools:context=".Screens.ProductsActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp">
-
+         android:orientation="horizontal"
+        android:padding="20dp"
+        android:gravity="center_vertical">
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/logo"
+            android:id="@+id/backBtn"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/back"
+            android:layout_marginRight="10dp"
+            app:tint="@color/textcolor"
             />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Cart"
+            android:text="Products"
             android:fontFamily="@font/poppins_bold"
-            android:textSize="25sp"
+            android:textSize="28sp"
+
             android:textColor="@color/textcolor"
-            android:layout_weight="1"
-            android:translationX="-1dp"/>
+            android:layout_weight="1"/>
 
         <ImageView
             android:id="@+id/search"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/search"
+            app:tint="@color/textcolor"
             />
 
+
+
+
     </LinearLayout>
+
+
+
+
+
+
+
 
 </LinearLayout>
