--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,6 @@
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:padding="20dp"
        android:orientation="vertical">
 
        <LinearLayout
@@ -69,7 +68,6 @@
 
            </LinearLayout>
 
-
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="40dp"
@@ -80,10 +78,8 @@
                android:layout_marginRight="10dp"
                />
 
-
-
-
        </LinearLayout>
+
 
 <!--       Search Box-->
        <LinearLayout
@@ -93,6 +89,8 @@
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:gravity="center"
+           android:layout_marginHorizontal="30dp"
+           android:layout_marginTop="10dp"
            android:background="@drawable/search_bg">
 
            <TextView
