--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -39,16 +39,19 @@
             app:tint="@color/textcolor"
             />
 
-
-
-
     </LinearLayout>
 
 
-
-
-
-
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:horizontalSpacing="10dp"
+        android:numColumns="2"
+        android:paddingHorizontal="10dp"
+        android:verticalSpacing="10dp"
+        tools:listitem="@layout/product_listview" />
 
 
 </LinearLayout>
