--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -3,13 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Screens.Fragments.AccountFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="30sp"
-        android:text="Account" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+      android:gravity="center_vertical"
+       android:orientation="horizontal"
+       android:paddingHorizontal="20dp"
+       android:paddingVertical="10dp">
+
+       <ImageView
+           android:layout_width="50dp"
+           android:layout_height="50dp"
+           android:src="@drawable/logo"/>
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="My Account"
+           android:fontFamily="@font/poppins_bold"
+           android:textSize="25dp"
+           android:textColor="@color/textcolor"
+           android:layout_weight="1"
+           android:translationX="1dp"/>
+       <ImageView
+           android:layout_width="25dp"
+           android:layout_height="25dp"
+           android:src="@drawable/search"/>
+
+
+
+
+
+   </LinearLayout>
 
 </FrameLayout>
