--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,49 +9,65 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         android:orientation="horizontal"
-        android:padding="20dp"
-        android:gravity="center_vertical">
-        <ImageView
-            android:id="@+id/backBtn"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/back"
-            android:layout_marginRight="10dp"
-            app:tint="@color/textcolor"
-            />
-        <TextView
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Products"
-            android:fontFamily="@font/poppins_bold"
-            android:textSize="28sp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            android:gravity="center_vertical">
+            <ImageView
+                android:id="@+id/backBtn"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/back"
+                android:layout_marginRight="10dp"
+                app:tint="@color/textcolor"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Products"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="28sp"
 
-            android:textColor="@color/textcolor"
-            android:layout_weight="1"/>
+                android:textColor="@color/textcolor"
+                android:layout_weight="1"/>
 
-        <ImageView
-            android:id="@+id/search"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/search"
-            app:tint="@color/textcolor"
-            />
+            <ImageView
+                android:id="@+id/search"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/search"
+                app:tint="@color/textcolor"
+                />
+
+        </LinearLayout>
+
+
+        <GridView
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:horizontalSpacing="10dp"
+            android:numColumns="2"
+            android:paddingHorizontal="10dp"
+            android:verticalSpacing="10dp"
+            tools:listitem="@layout/product_listview" />
 
     </LinearLayout>
 
-
-    <GridView
-        android:id="@+id/gridview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:horizontalSpacing="10dp"
-        android:numColumns="2"
-        android:paddingHorizontal="10dp"
-        android:verticalSpacing="10dp"
-        tools:listitem="@layout/product_listview" />
-
-
-</LinearLayout>
+   <com.google.android.material.floatingactionbutton.FloatingActionButton
+       android:id="@+id/addProductBtn"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="bottom|end"
+       android:layout_margin="20dp"
+       android:src="@drawable/add"
+       android:tint="@color/white"
+       android:backgroundTint="@color/myTheme"
+       />
+</FrameLayout>
