--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -50,6 +50,18 @@
 
 
             </FrameLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageErrTextview"
+                android:text="error"
+                android:textAlignment="center"
+                android:textColor="#F61E1E"
+                android:textStyle="bold"
+                android:layout_marginVertical="10dp"
+                android:visibility="gone"/>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/pName"
                 android:layout_width="match_parent"
