--- a/app/src/main/res/layout/product_listview.xml
+++ b/app/src/main/res/layout/product_listview.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/item">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -12,11 +13,13 @@
 
 
         <ImageView
+            android:id="@+id/pImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/testy" />
 
         <ImageView
+            android:id="@+id/wishlistBtn"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/baseline_favorite_border_24"
@@ -32,7 +35,8 @@
             android:layout_gravity="bottom|right"
             android:alpha="0.6"
             android:layout_margin="15dp"
-            android:visibility="gone">
+            android:visibility="gone"
+            >
 
             <ImageView
                 android:id="@+id/editBtn"
@@ -54,6 +58,7 @@
     </FrameLayout>
 
   <TextView
+      android:id="@+id/pName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Sansevieria Trifasci..."
@@ -65,9 +70,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/pRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4.5 \"
+            android:text="4.5 |"
             android:paddingHorizontal="8dp"
             android:fontFamily="@font/poppins_semibold"
             android:textSize="14dp"
@@ -75,6 +81,7 @@
 
 
        <TextView
+           android:id="@+id/pStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23 Stock"
@@ -89,6 +96,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/pPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="$32"
