--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,4 +11,25 @@
     </style>
 
     <style name="Theme.Khalid" parent="Base.Theme.Khalid" />
+    <style name="EcommButton">
+        <item name="android:background">@drawable/buttonshape</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <style name="EcommButtonSecondary">
+        <item name="android:background">@drawable/buttonshape</item>
+        <item name="android:backgroundTint">#E6F8EF</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/myTheme</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
