--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,15 @@
     </style>
 
     <style name="Theme.Khalid" parent="Base.Theme.Khalid" />
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_top</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
+    </style>
+    <style name="DialogAnimationBottom">
+        <item name="android:windowEnterAnimation">@anim/dialog_slide_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_slide_out</item>
+    </style>
     <style name="EcommButton">
         <item name="android:background">@drawable/buttonshape</item>
         <item name="android:fontFamily">@font/poppins_bold</item>
