--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -37,6 +37,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/searchBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -51,7 +52,7 @@
 
             <EditText
                 android:layout_width="wrap_content"
-                android:layout_height="20dp"
+                android:layout_height="50dp"
                 android:drawableStart="@drawable/search"
                 android:text="Search"
                 android:gravity="center_vertical"
