--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -48,22 +48,21 @@
             android:layout_marginTop="-10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/search_bg">
-
             <EditText
+                android:id="@+id/searchEditText"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:drawableStart="@drawable/search"
-                android:text="Search here"
-                android:gravity="center_vertical"
-                android:fontFamily="@font/poppins_bold"
-                android:textSize="14sp"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:textColor="#A39595"
-                android:drawablePadding="10dp"
+                android:hint="Search Here"
+                android:textColorHint="#BDBDBD"
                 android:layout_marginHorizontal="10dp"
-                android:drawableTint="@color/textcolor"
+                android:textSize="16sp"
                 android:background="@color/transparent"
-                />
+                android:maxLines="1"
+                android:minLines="1"
+                android:maxLength="30"
+                android:fontFamily="@font/poppins_semibold"
+                style="@style/Animation.Design.BottomSheetDialog"/>
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -72,6 +71,101 @@
 
 
         </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/notifyBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp"
+            android:visibility="visible">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='Result for “'
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="17sp"/>
+            <TextView
+                android:id="@+id/searchedWord"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='search here...'
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/myTheme"
+                android:maxLength="20"
+                android:textSize="17sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text='”'
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="17sp"
+                android:textColor="@color/myThemelight"/>
+
+            <TextView
+                android:id="@+id/totalCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAlignment="textEnd"
+                android:text='0 found'
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/myTheme"
+                android:textSize="16sp"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/searchContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="visible"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:src="@drawable/search_frame"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginTop="30dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Search Products"
+                    android:textColor="@color/textcolor"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="24sp"
+                    style="@style/Animation.Design.BottomSheetDialog"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="The keyword you entered can be found."
+                    android:fontFamily="@font/poppins_bold"
+                    android:textAlignment="center"
+                    android:layout_marginTop="10dp"
+                    android:textSize="18sp"
+                    style="@style/Animation.Design.BottomSheetDialog"/>
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
 
 
         <GridView
