--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -1,40 +1,197 @@
+
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Screens.Fragments.CardFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Screens.Fragments.CartFragment"
+    style="@style/screenBgTwo">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp">
+        android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/logo"
-            />
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/logo"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="My Cart"
-            android:fontFamily="@font/poppins_bold"
-            android:textSize="25sp"
-            android:textColor="@color/textcolor"
+            android:fontFamily="@font/urbanist_bold"
+            android:textSize="28sp"
+            android:translationX="-5dp"
             android:layout_weight="1"
-            android:translationX="-1dp"/>
+            style="@style/textColor"/>
 
         <ImageView
             android:id="@+id/search"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/search"
-            />
+            android:layout_marginRight="15dp"
+            android:visibility="gone"
+            style="@style/iconColor"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/notfoundContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_marginHorizontal="20dp"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            style=""/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_marginTop="30dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Your cart is empty"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="24sp"
+                style="@style/textColor"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="You don't have any items added to cart yet. You need to add items to cart before checkout."
+                android:fontFamily="@font/poppins_bold"
+                android:textAlignment="center"
+                android:layout_marginTop="10dp"
+                android:textSize="18sp"
+                style="@style/textColorLight"/>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/cartContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:dividerHeight="0dp"
+            android:divider="@null"
+            android:scrollbars="none"
+            tools:listitem="@layout/product_listview"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="25dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            style="@style/borderRadiusTop"
+            android:layout_marginBottom="-1dp"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginRight="-1dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="0.3">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total price"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="12sp"
+                    android:lineHeight="17dp"
+                    style="@style/textColorLight"/>
+
+                <TextView
+                    android:id="@+id/totalPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="$0"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="24sp"
+                    style="@style/textColor"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btnCheckout"
+                android:layout_width="wrap_content"
+                android:layout_height="58dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="@drawable/buttonshape"
+                android:layout_marginLeft="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Checkout"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/white"/>
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/arrow_right"
+                    android:layout_marginLeft="10dp"
+                    app:tint="@color/white" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/btnOutOfStock"
+                android:layout_width="wrap_content"
+                android:layout_height="58dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="@drawable/buttonshape"
+                android:visibility="gone"
+                style="@style/EcommButtonSecondary">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Out of Stock"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textSize="16sp"
+                    style="@style/EcommButtonSecondary"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
