--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -57,4 +57,12 @@
     <style name="screenBgTwo">
         <item name="android:background">#FCFCFC</item>
     </style>
+    <style name="textColorLight">
+        <item name="android:textColor">#616161</item>
+    </style>
+
+    <style name="borderRadiusTop">
+        <item name="android:background">@drawable/borderadiustop</item>
+    </style>
+
 </resources>
