--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/Animation.Design.BottomSheetDialog"
+    style="@style/screenBg"
     tools:context=".Screens.SearchActivity">
 
     <LinearLayout
@@ -25,7 +25,7 @@
                 android:layout_height="25dp"
                 android:src="@drawable/back"
                 android:layout_marginRight="10dp"
-                style="@style/Animation.Design.BottomSheetDialog"/>
+                style="@style/iconColor"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
             android:gravity="center"
             android:layout_marginTop="-5dp"
             android:layout_marginBottom="10dp"
-            style="@style/Animation.Design.BottomSheetDialog">
+            style="@style/searchBg">
 
             <ImageView
                 android:layout_width="24dp"
@@ -72,7 +72,7 @@
                 android:minLines="1"
                 android:maxLength="30"
                 android:fontFamily="@font/poppins_bold"
-                style="@style/Animation.Design.BottomSheetDialog"/>
+                style="@style/textColorLight"/>
 
             <ImageView
                 android:id="@+id/clear_text"
@@ -100,7 +100,7 @@
             android:layout_marginHorizontal="25dp"
             android:layout_marginBottom="15dp"
             android:layout_marginTop="10dp"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
                 android:text='Result for “'
                 android:fontFamily="@font/poppins_bold"
                 android:textSize="20sp"
-                style="@style/Animation.Design.BottomSheetDialog"/>
+                style="@style/textColor"/>
             <TextView
                 android:id="@+id/searchedWord"
                 android:layout_width="wrap_content"
@@ -124,7 +124,7 @@
                 android:text='”'
                 android:fontFamily="@font/poppins_bold"
                 android:textSize="20sp"
-                style="@style/Animation.Design.BottomSheetDialog"/>
+                style="@style/textColor"/>
 
             <TextView
                 android:id="@+id/totalCount"
@@ -152,7 +152,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
-                style="@style/Animation.Design.BottomSheetDialog"/>
+                style="@style/notFoundImage"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -167,7 +167,7 @@
                     android:text="Not Found"
                     android:fontFamily="@font/poppins_bold"
                     android:textSize="24sp"
-                    style="@style/Animation.Design.BottomSheetDialog"/>
+                    style="@style/textColor"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -177,7 +177,7 @@
                     android:textAlignment="center"
                     android:layout_marginTop="10dp"
                     android:textSize="18sp"
-                    style="@style/Animation.Design.BottomSheetDialog"/>
+                    style="@style/textColorLight"/>
 
 
             </LinearLayout>
@@ -222,7 +222,7 @@
                     android:textAlignment="center"
                     android:layout_marginTop="10dp"
                     android:textSize="18sp"
-                    style="@style/Animation.Design.BottomSheetDialog"/>
+                    style="@style/textColorLight"/>
 
 
             </LinearLayout>
