detail page done

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -9,7 +9,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         style="@style/productBgColor">
 
@@ -88,7 +88,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         style="@style/screenBg">
 
@@ -181,7 +181,7 @@
                 android:id="@+id/pDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lorem ipsum dolor sit amet, consectetur."
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
                 android:fontFamily="@font/poppins_bold"
                 android:textSize="14sp"
                 android:layout_marginTop="10dp"
@@ -226,7 +226,7 @@
                         android:id="@+id/pQty"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
+                        android:text="1"
                         android:fontFamily="@font/poppins_bold"
                         android:textSize="18sp"
                         android:layout_marginHorizontal="15dp"
@@ -299,7 +299,7 @@
                 <LinearLayout
                     android:id="@+id/btnAddToCart"
                     android:layout_width="wrap_content"
-                    android:layout_height="70dp"
+                    android:layout_height="58dp"
                     android:gravity="center"
                     android:layout_weight="1"
                     android:orientation="horizontal"
